<resources>
    <string name="app_name">Favorite Books</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="delete_all_entries">Delete all entries</string>
    <string name="insert_dummy_data">Insert dummy data</string>
    <string name="product_name">Product name</string>
    <string name="product_description">Product description</string>
    <string name="price_ct">Price (ct)</string>
    <string name="quantity">Quantity</string>
    <string name="supplier_name">Supplier name</string>
    <string name="supplier_phone_number">Supplier phone number</string>
    <string name="name_hint">Name</string>
    <string name="product_description_hint">Your product description</string>
    <string name="product_price_hint">Product price in cents</string>
    <string name="quantity_hint">Default value 0</string>
    <string name="supplier_name_hint">Supplier name</string>
    <string name="add_new_book">Add new book</string>
    <string name="use_only_numbers">Use only numbers</string>
    <string name="table_contains">The books table contains %1$d books.\n\n</string>
    <string name="fault_in_stars">The Fault In Our Stars</string>
    <string name="description_fault_in_stars">John Green. Love and pain</string>
    <string name="supplier_fault_in_stars">Alma littera</string>
    <string name="log_dummy_values">Dummy values inserted:</string>
    <string name="error_saving_data">Error with saving products</string>
    <string name="product_saved">Product saved with id %1$d</string>
    <string name="cont_desc_editor_book">Flowers and open book</string>
    <string name="where_are_books">Where are my favorite books?</string>
    <string name="add_a_book">Get started by adding a book</string>
    <string name="buy">Buy</string>
    <string name="in_stock">In stock: %1$d</string>
    <string name="price">Price: %1$s</string>
    <string name="button_add_image">Add image</string>
    <string name="enter_phone">Please, enter the phone number</string>
    <string name="select_picture">Select Picture</string>
    <string name="delete_all_dialog_msg">Delete all books?</string>
    <string name="cancel">Cancel</string>
    <string name="main_delete_books_successful">All books deleted</string>
    <string name="main_delete_books_failed">Error with deleting books</string>
    <string name="default_image">default</string>
    <string name="name_required">Product requires a name</string>
    <string name="correct_price">Product requires a correct price</string>
    <string name="correct_quantity">Quantity must be a positive value</string>
    <string name="provide_supplier">Please, provide supplier</string>
    <string name="provide_supplier_phone">Please, provide supplier phone number, use only numbers</string>
    <string name="update_product">Update product</string>
    <string name="add_product">Add a new product</string>
    <string name="error_updating_book">Error with updating book</string>
    <string name="update_successful">Book updated successfully</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_error_deleting">Error with deleting book</string>
    <string name="editor_deleted_successfully">Book deleted successfully</string>
    <string name="delete_book">Delete this book?</string>
</resources>
